# larp

./: .aiderules  .clinerules  .gitignore  ARCHITECTURE.md  CONCEPTS.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  FEATURES.md  HOW_TO_CONTRIBUTE.md  KNOWLEDGE_GRAPH.md  README.md  ROADMAP.md  api-documentation.md  architecture.md  conversation_integration.py  deployment-guide.md  development-guide.md  example.txt  fail.txt  frontend-building.md  git-tool.md  git_tool.rs  git_tool_integration.md  learning.md  output.txt  package_windows_bin.sh  package_windows_zip.sh  patch.diff  reproduce_error.py  sidecar-settings.md  standalone-sidecar.md  test_mcts.json  test_web_plugin.py  testing-guide.md  update_version.sh
.github/workflows/: release.yaml
agent_repl/: Cargo.toml  README.md  build.sh
agent_repl/src/: agent.rs  main.rs  models.rs  tools.rs
docs/: lsp_configuration.md  model_configuration.md
examples/: lsp_config.json  models_config.json
frontend/: README.md  next.config.js  package.json  tailwind.config.js
frontend/components/: ChatInterface.tsx  CodeEditor.tsx  FileExplorer.tsx
frontend/pages/: index.tsx
frontend/services/: api.ts  lsp.ts
frontend/styles/: globals.css
larp/: Cargo.toml
llm_client/: Cargo.toml
llm_client/src/: broker.rs  provider.rs
logging/: Cargo.toml
logging/src/: lib.rs  tee_client.rs  (+1 more)
plugins/: web_plugin.py
puzzle-game/: LICENSE  README.md  next.config.js  package-for-windows.js  package.json  start-game.bat
sidecar/: Cargo.toml  build.rs
standalone-frontend/: docker-compose.dev.yml  docker-compose.yml
(+193 files in other folders)
