[package]
name = "agent_repl"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.0"
rustyline = "12.0"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
futures = "0.3"
regex = "1.8"